<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1">
    <TextView
        android:padding="30dp"
        android:id="@+id/label_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/prisoner_name"
        />
    <TextView
        android:padding="30dp"
        android:id="@+id/label_age"
        android:layout_below="@+id/label_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/age"
        />
    <TextView
        android:padding="30dp"
        android:id="@+id/label_crime"
        android:layout_below="@+id/label_age"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/crime"
        />
    <TextView
        android:padding="30dp"
        android:id="@+id/label_sentenced"
        android:layout_below="@+id/label_crime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Is_Sentenced"
        />
</RelativeLayout>