<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context="com.example.lvk.sqlite_sample.MainSQLiteActivity">

    <TextView
        android:id="@+id/Shawshank_prison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/shawshank_prison"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospac"
        />
    <RelativeLayout
        android:layout_below="@+id/Shawshank_prison"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:background="@drawable/mybutton"
            android:padding="5dp"
            android:id="@+id/add_prisoner"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Add_Prisoner"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <Button
            android:background="@drawable/mybutton"
            android:padding="5dp"
            android:id="@+id/view_prisoner"
            android:layout_marginTop="30dp"
            android:layout_below="@id/add_prisoner"
            android:layout_centerHorizontal="true"
            android:text="@string/View_Prisoners"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </RelativeLayout>


</RelativeLayout>
